--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+:root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-} */
+  --background-start-rgb: 214, 235, 255;
+  --background-end-rgb: 214, 155, 255;
+}
 
 
 @media (prefers-color-scheme: dark) {
