--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,16 +21,13 @@ body {
   color: white; 
  } 
 
-/* html {
+html {
   background: #0b0215 url("/THEWOODS.png") no-repeat fixed;
-} */
+}
 
 @layer utilities {
   .bg-sleepycabin {
     background-image: url('/patternDARK.png');
-  }
-  .bg-sleepycabinwoods {
-    background-image: url('/THEWOODS.png');
   }
   .bg-green-100 {
     --tw-bg-opacity: 1;
